# think

./: README.md  pyproject.toml
assets/: think.drawio
demo_files/: answers.txt  questions.txt  users.txt
django/: db.sqlite3  fill_with_dummy_data.py
django/config/: settings.py  urls.py
django/think/: admin.py  forms.py  models.py  urls.py  views.py
django/think/migrations/: 0001_initial.py  0002_profile_alter_answer_question_alter_answer_user_and_more.py  0003_rename_question_answer_question_id.py
django/think/templates/: home.html  index.html
