[tool.poetry]
name = "think"
version = "0.1.0"
description = ""
authors = ["mikegongolidis <mikegongolidis@hotmail.gr>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
